--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.lld filter=lfs diff=lfs merge=lfs -text
 *.db filter=lfs diff=lfs merge=lfs -text
+*.dsymutil filter=lfs diff=lfs merge=lfs -text
+*.wasm filter=lfs diff=lfs merge=lfs -text
