--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,7 @@
 *.db filter=lfs diff=lfs merge=lfs -text
 *.dsymutil filter=lfs diff=lfs merge=lfs -text
 *.wasm filter=lfs diff=lfs merge=lfs -text
+Library/ArtifactDB filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.burst@1.6.6/.Runtime/hostmac/lld filter=lfs diff=lfs merge=lfs -text
+Library/**/*.dylib filter=lfs diff=lfs merge=lfs -text
+Library/**/*.bc filter=lfs diff=lfs merge=lfs -text
